# Exploration

./: .gitignore  CMakeLists.txt  Exploration2.cpp  Exploration3.cpp  Exploration4.cpp  chunk_editor.c  expl1.c  exploration1.cpp  main.c  mesh_instanced.c  particles_exploration.c  physic_exploration.c  physic_exploration1.cpp  render_exploration1.cpp  render_exploration2.cpp  resource_tool.cpp
resources/models/: terrain_models.glb
resources/models/character/: test_char.glb
resources/shaders/: basic.frag  basic.vert
src/: builtin_geometry.h  camera_utils.h  chunk.c  chunk.h  geometry.cpp  geometry.h  map.c  map.cpp  map.h  math_utils.h  model.cpp  model.h  particles.c  particles.h  resource.h  texture.cpp  texture.h
src/loader/: gltf.h
src/math/: expl_math.h  vector.h
src/physic/: core.h  particles.c  particles.cpp  particles.h  physic.h
src/render/: expl_render.h  gl_debug.cpp  gl_debug.h  material.cpp  material.h  model.cpp  model.h  render.h  render_element.h  renderer.cpp  renderer.h  shader.cpp  shader.h  viewport.h
src/resource/: gltf_parser.h  mesh.cpp  mesh.h  obj_parser.h  resource.h
src/utilities/: debug_draw.h
tests/: CMakeLists.txt  basic_physic_tests.cpp  expl_math_tests.cpp  gltf_loader_tests.cpp  gltf_parser_tests.cpp  map_tests.cpp  mesh_loader_tests.cpp  obj_parser_tests.cpp  particles_tests.cpp
